[package]
name = "rustbot"
version = "0.5.0"
authors = ["Michael Lingo <spartan364@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.10" }
serde_json = "*"
serde = { version = "*", features = ["rc"] }
regex = "*"
once_cell = "*"
simple-error = "*"
unicode-normalization = "*"
serenity = { git = "https://github.com/serenity-rs/serenity", features = ["framework", "standard_framework", "collector"], branch = "current"}
rand = "*"
strsim = "*"
chrono = "*"
tokio  = { version = "^0.2", features = ["rt-threaded", "time", "sync", "fs", "macros", "rt-util", "blocking"] }
#serenity = { version = "^0.9.0", features = ["framework", "standard_framework", "collector", ] }
futures = "*"
log = "*"
pretty_env_logger = "*"
itertools = "*"

[profile.release]
lto = true
opt-level = 3